perf(backend): optimize HikariCP connection pool and clean up image payload for sub-second document queries